--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
         },
         "sourceType": "script"
     },
+    "plugins": ["jsdoc"],
     "rules": {
         "func-names": 0,
         "strict": [2, "global"],
@@ -26,6 +27,17 @@
         "no-plusplus": 0,
         "import/no-extraneous-dependencies": 0,
         "require-yield": 0,
-        "class-methods-use-this": 0
+        "class-methods-use-this": 0,
+        "jsdoc/check-param-names": 2,
+        "jsdoc/check-types": 2,
+        "jsdoc/newline-after-description": 2,
+        "jsdoc/require-description-complete-sentence": 0,
+        "jsdoc/require-hyphen-before-param-description": 2,
+        "jsdoc/require-param": 2,
+        "jsdoc/require-param-description": 0,
+        "jsdoc/require-param-type": 2,
+        "jsdoc/require-returns-description": 0,
+        "jsdoc/require-returns-type": 2,
+        "no-await-in-loop": 0
     }
 }
