--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "1.0.8",
+  "version": "1.1.0-alpha.2",
   "description": "Facebook Messenger Chatbot Framework",
   "main": "index.js",
   "scripts": {
