--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "1.1.0-alpha.3",
+  "version": "1.1.0",
   "description": "Facebook Messenger Chatbot Framework",
   "main": "index.js",
   "scripts": {
@@ -51,7 +51,8 @@
   "dependencies": {
     "path-to-regexp": "^2.2.0",
     "request": "^2.85.0",
-    "request-promise-native": "^1.0.5"
+    "request-promise-native": "^1.0.5",
+    "tsd-jsdoc": "^2.0.0-beta.5"
   },
   "optionalDependencies": {
     "po2json": "^0.4.5",
