--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "1.2.1",
+  "version": "1.2.2-alpha.1",
   "description": "Facebook Messenger Chatbot Framework",
   "main": "index.js",
   "scripts": {
