--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "1.5.0",
+  "version": "2.0.0-alpha.12",
   "description": "Facebook Messenger Chatbot Framework",
   "main": "index.js",
   "scripts": {
@@ -46,13 +46,16 @@
     "mocha": "^5.2.0",
     "nyc": "^13.0.1",
     "po2json": "^0.4.5",
-    "sinon": "^6.3.5"
+    "sinon": "^6.3.5",
+    "tsd-jsdoc": "^2.0.0-beta.5"
   },
   "dependencies": {
+    "graphql": "^14.0.2",
+    "graphql-mongodb-projection": "^1.1.1",
+    "jsonwebtoken": "^8.3.0",
     "path-to-regexp": "^2.2.0",
     "request": "^2.85.0",
-    "request-promise-native": "^1.0.5",
-    "tsd-jsdoc": "^2.0.0-beta.5"
+    "request-promise-native": "^1.0.5"
   },
   "optionalDependencies": {
     "po2json": "^0.4.5",
