--- a/package.json
+++ b/package.json
@@ -33,30 +33,30 @@
   },
   "homepage": "https://github.com/wingbot.ai/wingbot#readme",
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-mocha": "^0.4.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsdoc": "^3.6.3",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-mocha": "^5.0.0",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-mocha": "^0.5.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsdoc": "^4.1.0",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
+    "eslint-plugin-mocha": "^5.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "gitbook-cli": "^2.3.2",
     "graphql-markdown": "^5.0.1",
     "handlebars": "^4.0.11",
     "jsdoc-to-markdown": "^4.0.1",
     "mocha": "^5.2.0",
-    "nyc": "^13.0.1",
+    "nyc": "^13.1.0",
     "po2json": "^0.4.5",
-    "sinon": "^6.3.5",
-    "tsd-jsdoc": "^2.0.0-beta.5"
+    "sinon": "^7.2.3",
+    "tsd-jsdoc": "^2.1.2"
   },
   "dependencies": {
-    "graphql": "^14.0.2",
+    "graphql": "^14.1.1",
     "graphql-mongodb-projection": "^1.1.1",
-    "jsonwebtoken": "^8.3.0",
-    "path-to-regexp": "^2.2.0",
-    "request": "^2.85.0",
+    "jsonwebtoken": "^8.4.0",
+    "path-to-regexp": "^3.0.0",
+    "request": "^2.88.0",
     "request-promise-native": "^1.0.5"
   },
   "optionalDependencies": {
