--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Facebook Messenger Chatbot Framework",
   "main": "index.js",
   "scripts": {
+    "tsd:update": "jsdoc -t ./node_modules/tsd-jsdoc/dist/ -r ./src",
     "doc:gql": "graphql-markdown ./src/graphApi/schema.gql > doc/api/graphqlSchema.md",
     "doc": "npm run doc:gql && node ./bin/makeApiDoc.js && gitbook install ./doc && gitbook build ./doc && rm -rf ./docs && mv ./doc/_book ./docs",
     "test": "npm run test:lint && npm run test:coverage && npm run test:coverage:threshold",
@@ -44,12 +45,13 @@
     "gitbook-cli": "^2.3.2",
     "graphql-markdown": "^5.0.1",
     "handlebars": "^4.1.2",
+    "jsdoc": "^3.6.3",
     "jsdoc-to-markdown": "^5.0.0",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
     "po2json": "^0.4.5",
     "sinon": "^7.2.7",
-    "tsd-jsdoc": "^2.1.3"
+    "tsd-jsdoc": "^2.3.1"
   },
   "dependencies": {
     "graphql": "^14.1.1",
