--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "2.29.6",
+  "version": "3.0.0-alpha.4",
   "description": "Facebook Messenger Chatbot Framework",
   "main": "index.js",
   "scripts": {
