--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "3.0.0-alpha.13",
+  "version": "3.0.0-alpha.18",
   "description": "Facebook Messenger Chatbot Framework",
   "main": "index.js",
   "scripts": {
@@ -25,7 +25,7 @@
     "Bot"
   ],
   "engines": {
-    "node": "^8.0.0"
+    "node": ">=8.0.0"
   },
   "author": "wingbot.ai",
   "license": "MIT",
