--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "wingbot",
-  "version": "3.3.3",
+  "version": "3.4.0",
   "description": "Enterprise Messaging Bot Conversation Engine",
   "main": "index.js",
   "scripts": {
     "tsd:update": "jsdoc -t ./node_modules/tsd-jsdoc/dist/ -r ./src",
     "doc:gql": "graphql-markdown ./src/graphApi/schema.gql > doc/api/graphqlSchema.md",
-    "doc": "npm run doc:gql && node ./bin/makeApiDoc.js && gitbook install ./doc && gitbook build ./doc && rimraf -rf ./docs && move-cli ./doc/_book ./docs",
+    "doc": "npm run doc:gql && node ./bin/makeApiDoc.js && cpy ./CHANGELOG.md ./doc && gitbook install ./doc && gitbook build ./doc && rimraf -rf ./docs && rimraf --rf ./doc/CHANGELOG.md && move-cli ./doc/_book ./docs",
     "test": "npm run test:lint && npm run test:coverage && npm run test:coverage:threshold",
     "test:coverage": "nyc --reporter=html mocha --opts ./mocha.opts ./test && nyc report",
     "test:coverage:threshold": "nyc check-coverage --lines 85 --functions 85 --branches 76",
@@ -36,6 +36,7 @@
   },
   "homepage": "https://github.com/wingbot.ai/wingbot#readme",
   "devDependencies": {
+    "cpy-cli": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-mocha": "^0.5.0",
