--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "3.4.0",
+  "version": "3.5.0",
   "description": "Enterprise Messaging Bot Conversation Engine",
   "main": "index.js",
   "scripts": {
@@ -8,9 +8,9 @@
     "doc:gql": "graphql-markdown ./src/graphApi/schema.gql > doc/api/graphqlSchema.md",
     "doc": "npm run doc:gql && node ./bin/makeApiDoc.js && cpy ./CHANGELOG.md ./doc && gitbook install ./doc && gitbook build ./doc && rimraf -rf ./docs && rimraf --rf ./doc/CHANGELOG.md && move-cli ./doc/_book ./docs",
     "test": "npm run test:lint && npm run test:coverage && npm run test:coverage:threshold",
-    "test:coverage": "nyc --reporter=html mocha --opts ./mocha.opts ./test && nyc report",
+    "test:coverage": "nyc --reporter=html mocha ./test && nyc report",
     "test:coverage:threshold": "nyc check-coverage --lines 85 --functions 85 --branches 76",
-    "test:backend": "mocha --opts ./mocha.opts ./test ./src",
+    "test:backend": "mocha ./test",
     "test:lint": "eslint --ext .js src test *.js"
   },
   "repository": {
@@ -36,35 +36,35 @@
   },
   "homepage": "https://github.com/wingbot.ai/wingbot#readme",
   "devDependencies": {
-    "cpy-cli": "^3.1.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-mocha": "^0.5.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsdoc": "^4.8.4",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-mocha": "^5.3.0",
-    "eslint-plugin-react": "^7.13.0",
+    "cpy-cli": "^3.1.1",
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-mocha": "^0.7.3",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsdoc": "^28.5.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-mocha": "^7.0.1",
+    "eslint-plugin-react": "^7.20.0",
     "gitbook-cli": "^2.3.2",
-    "graphql-markdown": "^5.0.1",
-    "handlebars": "^4.1.2",
-    "jsdoc": "^3.6.3",
-    "jsdoc-to-markdown": "^5.0.3",
-    "mocha": "^6.1.4",
+    "graphql-markdown": "^5.2.0",
+    "handlebars": "^4.7.6",
+    "jsdoc": "^3.6.4",
+    "jsdoc-to-markdown": "^6.0.1",
+    "mocha": "^8.0.1",
     "move-cli": "^1.2.1",
-    "nyc": "^14.1.1",
+    "nyc": "^15.1.0",
     "po2json": "^0.4.5",
     "rimraf": "^3.0.2",
-    "sinon": "^7.2.7",
-    "tsd-jsdoc": "^2.3.1"
+    "sinon": "^9.0.2",
+    "tsd-jsdoc": "^2.5.0"
   },
   "dependencies": {
-    "graphql": "^14.1.1",
+    "graphql": "^15.1.0",
     "graphql-mongodb-projection": "^1.1.1",
-    "jsonwebtoken": "^8.5.0",
-    "path-to-regexp": "^3.0.0",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.7"
+    "jsonwebtoken": "^8.5.1",
+    "path-to-regexp": "^6.1.0",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.8"
   },
   "optionalDependencies": {
     "po2json": "^0.4.5",
