--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "3.6.0-alpha.4",
+  "version": "3.6.0-alpha.5",
   "description": "Enterprise Messaging Bot Conversation Engine",
   "main": "index.js",
   "scripts": {
@@ -62,7 +62,8 @@
     "graphql-mongodb-projection": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.0",
-    "path-to-regexp": "^6.1.0"
+    "path-to-regexp": "^6.1.0",
+    "uuid": "^8.3.0"
   },
   "optionalDependencies": {
     "po2json": "^0.4.5",
