--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-mocha": "^8.0.0",
     "eslint-plugin-react": "^7.21.5",
+    "esm": "^3.2.25",
     "gitbook-cli": "^2.3.2",
     "graphql-markdown": "^5.2.0",
+    "graphql-tools": "^7.0.2",
     "handlebars": "^4.7.6",
     "jsdoc-to-markdown": "^6.0.1",
     "mocha": "^8.2.1",
