--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "3.10.0-alpha.4",
+  "version": "3.10.0-alpha.5",
   "description": "Enterprise Messaging Bot Conversation Engine",
   "main": "index.js",
   "scripts": {
@@ -45,10 +45,8 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-mocha": "^8.0.0",
     "eslint-plugin-react": "^7.21.5",
-    "esm": "^3.2.25",
     "gitbook-cli": "^2.3.2",
     "graphql-markdown": "^5.2.0",
-    "graphql-tools": "^7.0.2",
     "handlebars": "^4.7.6",
     "jsdoc-to-markdown": "^6.0.1",
     "mocha": "^8.2.1",
@@ -65,8 +63,7 @@
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1",
     "path-to-regexp": "^6.2.0",
-    "uuid": "^8.3.1",
-    "webalize": "^0.1.0"
+    "uuid": "^8.3.1"
   },
   "optionalDependencies": {
     "po2json": "^0.4.5",
