--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,16 +5,22 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
+            "args": [
+                "-u",
+                "bdd",
+                "--timeout",
+                "999999",
+                "--colors",
+                "${workspaceFolder}/test"
+            ],
+            "internalConsoleOptions": "openOnSessionStart",
+            "name": "Mocha Tests",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
             "request": "launch",
-            "name": "Test Program",
-            "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
-            "cwd": "${workspaceRoot}",
-            "args": ["-d", "./test/"],
-            "protocol": "inspector",
-            "env": {
-                "NODE_ENV": "test"
-            }
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "pwa-node"
         },
         {
             "type": "node",
