--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "3.10.0-alpha.5",
+  "version": "3.10.0-alpha.7",
   "description": "Enterprise Messaging Bot Conversation Engine",
   "main": "index.js",
   "scripts": {
@@ -47,6 +47,7 @@
     "eslint-plugin-react": "^7.21.5",
     "gitbook-cli": "^2.3.2",
     "graphql-markdown": "^5.2.0",
+    "graphql-tools": "^7.0.3",
     "handlebars": "^4.7.6",
     "jsdoc-to-markdown": "^6.0.1",
     "mocha": "^8.2.1",
@@ -63,7 +64,8 @@
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1",
     "path-to-regexp": "^6.2.0",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "webalize": "^0.1.0"
   },
   "optionalDependencies": {
     "po2json": "^0.4.5",
