--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "3.17.1",
+  "version": "3.18.0",
   "description": "Enterprise Messaging Bot Conversation Engine",
   "main": "index.js",
   "scripts": {
@@ -67,10 +67,10 @@
     "webalize": "^0.1.0"
   },
   "optionalDependencies": {
+    "axios": "^0.21.1",
     "handlebars": "^4.0.0",
     "po2json": "^0.4.5",
-    "request-promise-native": "^1.0.7",
     "request": "^2.88.0",
-    "axios": "^0.21.1"
+    "request-promise-native": "^1.0.7"
   }
 }
