fixed eslint after package lock changes

--- a/.eslintrc
+++ b/.eslintrc
@@ -38,7 +38,8 @@
         "jsdoc/require-param-type": 2,
         "jsdoc/require-returns-description": 0,
         "jsdoc/require-returns-type": 2,
-        "no-await-in-loop": 0
+        "no-await-in-loop": 0,
+        "react/destructuring-assignment": 0
     },
     "settings": {
         "jsdoc": {
