--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "3.30.2",
+  "version": "3.31.0",
   "description": "Enterprise Messaging Bot Conversation Engine",
   "main": "index.js",
   "scripts": {
@@ -53,6 +53,7 @@
     "tsd-jsdoc": "^2.5.0"
   },
   "dependencies": {
+    "form-data": "^4.0.0",
     "graphql": "^15.8.0",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.7",
