--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,7 @@
     "configurations": [
         {
             "args": [
+                "--trace-warnings",
                 "-u",
                 "bdd",
                 "--timeout",
@@ -13,6 +14,7 @@
                 "--colors",
                 "${workspaceFolder}/test"
             ],
+            "trace": true,
             "internalConsoleOptions": "openOnSessionStart",
             "name": "Mocha Tests",
             "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
