--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "3.31.8",
+  "version": "3.31.9",
   "description": "Enterprise Messaging Bot Conversation Engine",
   "main": "index.js",
   "scripts": {
@@ -57,14 +57,12 @@
     "graphql": "^15.8.0",
     "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.7",
-    "path-to-regexp": "^6.2.0",
+    "path-to-regexp": "^6.2.1",
     "uuid": "^8.3.2",
     "webalize": "^0.1.0"
   },
   "optionalDependencies": {
     "axios": "^0.21.1",
-    "handlebars": "^4.0.0",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.7"
+    "handlebars": "^4.0.0"
   }
 }
