--- a/documentation/package.json
+++ b/documentation/package.json
@@ -8,9 +8,10 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "gatsby": "^2.15.18",
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1",
-    "smooth-doc": "^5.0.4"
+    "@xstyled/styled-components": "^3.6.0",
+    "gatsby": "^3.14.6",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "smooth-doc": "^8.0.1"
   }
 }
