--- a/documentation/package.json
+++ b/documentation/package.json
@@ -8,10 +8,13 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "@xstyled/styled-components": "^3.6.0",
-    "gatsby": "^3.14.6",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "smooth-doc": "^8.0.1"
+    "@gatsbyjs/reach-router": "^1.3.9",
+    "gatsby": "^4.6.0",
+    "gatsby-link": "^4.20.0",
+    "gatsby-react-router-scroll": "^5.20.0",
+    "gatsby-script": "^1.5.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "smooth-doc": "^8.0.0"
   }
 }
