--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "3.49.0",
+  "version": "3.50.0",
   "description": "Enterprise Messaging Bot Conversation Engine",
   "main": "index.js",
   "scripts": {
@@ -53,6 +53,7 @@
     "tsd-jsdoc": "^2.5.0"
   },
   "dependencies": {
+    "@amplitude/ua-parser-js": "^0.7.31",
     "form-data": "^4.0.0",
     "graphql": "^15.8.0",
     "jsonwebtoken": "^9.0.0",
