--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "3.50.0",
+  "version": "3.51.1",
   "description": "Enterprise Messaging Bot Conversation Engine",
   "main": "index.js",
   "scripts": {
@@ -40,12 +40,12 @@
     "eslint": "^8.11.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsdoc": "^38.0.4",
+    "eslint-plugin-jsdoc": "^39.7.5",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-mocha": "^10.0.3",
     "eslint-plugin-react": "^7.29.4",
     "graphql-markdown": "^6.0.0",
-    "jsdoc-to-markdown": "^7.1.1",
+    "jsdoc-to-markdown": "^8.0.0",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "@amplitude/ua-parser-js": "^0.7.31",
+    "deep-extend": "^0.6.0",
     "form-data": "^4.0.0",
     "graphql": "^15.8.0",
     "jsonwebtoken": "^9.0.0",
