--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "3.51.1",
+  "version": "3.52.0-alpha.1",
   "description": "Enterprise Messaging Bot Conversation Engine",
   "main": "index.js",
   "scripts": {
