--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "wingbot",
-  "version": "3.67.10",
+  "version": "3.67.11",
   "description": "Enterprise Messaging Bot Conversation Engine",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "tsd:update": "jsdoc -t ./node_modules/tsd-jsdoc/dist/ -r ./src",
     "doc:gql": "graphql-markdown ./src/graphApi/schema.gql > doc/api/graphqlSchema.md",
@@ -36,20 +37,20 @@
   },
   "homepage": "https://github.com/wingbot.ai/wingbot#readme",
   "devDependencies": {
-    "cpy-cli": "^4.2.0",
-    "eslint": "^8.36.0",
+    "cpy-cli": "^5.0.0",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^40.1.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-mocha": "^10.1.0",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsdoc": "^48.0.2",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-mocha": "^10.2.0",
+    "eslint-plugin-react": "^7.33.2",
     "graphql-markdown": "^7.0.0",
     "jsdoc-to-markdown": "^8.0.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "rimraf": "^3.0.2",
-    "sinon": "^15.0.3",
+    "rimraf": "^5.0.5",
+    "sinon": "^17.0.1",
     "tsd-jsdoc": "^2.5.0"
   },
   "dependencies": {
