--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "3.67.28",
+  "version": "3.68.0-alpha.1",
   "description": "Enterprise Messaging Bot Conversation Engine",
   "main": "index.js",
   "type": "commonjs",
@@ -10,13 +10,13 @@
     "doc": "npm run doc:gql && node ./bin/makeApiDoc.js && cpy ./CHANGELOG.md ./doc && gitbook install ./doc && gitbook build ./doc && rimraf -rf ./docs && rimraf --rf ./doc/CHANGELOG.md && move-cli ./doc/_book ./docs",
     "test": "npm run test:lint && npm run test:coverage && npm run test:coverage:threshold",
     "test:coverage": "nyc --reporter=html mocha ./test && nyc report",
-    "test:coverage:threshold": "nyc check-coverage --lines 89 --functions 89 --branches 80",
+    "test:coverage:threshold": "nyc check-coverage --lines 89 --functions 88 --branches 80",
     "test:backend": "mocha ./test",
     "test:lint": "eslint --ext .js src test *.js plugins"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/wingbotai/wingbot.git"
+    "url": "git+ssh://git@github.com/wingbotai/wingnpbot.git"
   },
   "keywords": [
     "Enterprise",
