--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"],
+        "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string", "dom"],
         "target": "ESNext",
         "allowSyntheticDefaultImports": true,
         "checkJs": true,
