--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wingbot",
-  "version": "3.70.0-alpha.3",
+  "version": "3.70.0",
   "description": "Enterprise Messaging Bot Conversation Engine",
   "main": "index.js",
   "type": "commonjs",
